--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <h3 class="mb-4">Digital Marketing Specialist & Creative Strategist</h3>
                 <p class="lead">Passionate about creating meaningful digital experiences that connect brands with their audiences</p>
                 <div class="social-links mt-4">
-                    <a href="mailto:elton.october@email.com"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:eltonoct@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="https://linkedin.com/in/eltonoctober"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://twitter.com/eltonoctober"><i class="fab fa-twitter"></i></a>
-                    <a href="https://github.com/eltonoctober"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/Elton166"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <strong>Email:</strong> 
-                            <a href="mailto:elton.october@email.com" style="color: var(--accent-color); text-decoration: none;">elton.october@email.com</a>
+                            <a href="mailto:eltonoct@gmail.com" style="color: var(--accent-color); text-decoration: none;">eltonoct@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact-item">
