--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- About Section -->
     <section class="about-section">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center1">
                 <div class="col-lg-8">
                     <h2 class="section-title">About Me</h2>
                     <p class="mb-4">
